🐳 chore: 搭建rollup+ts开发环境

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
         "adobe.extendscript-debug",
-        "ms-vscode.powershell"
+        "andersnm.sourcemap-helper"
     ]
 }
