--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SCRIPT_NAME=toolbox.ui
+SCRIPT_NAME=layer-saver.ui
 NODE_ENV=dev
 AE_PATH=C:\Program Files (x86)\AE\Adobe After Effects 2024\Support Files
 TEST_FILE=demo/demo.aep
