--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-    "name": "ae-script",
-    "version": "1.0.0",
-    "description": "personal AfterEffect scripts",
-    "keywords": [],
-    "author": "Cubxx",
-    "license": "ISC",
-    "type": "module",
-    "scripts": {
-        "ae": "node script/launch.js",
-        "readme": "node script/readme.js",
-        "dev-only": "set NODE_ENV=dev&& rollup -c -w",
-        "dev": "run-p ae dev-only",
-        "build": "set NODE_ENV=prod&& rollup -c && npm run readme",
-        "i": "powershell ./setup.ps1"
-    },
-    "dependencies": {
-        "json5": "^2.2.3",
-        "soil-ts": "^1.1.6"
-    },
-    "devDependencies": {
-        "@rollup/plugin-node-resolve": "^15.2.3",
-        "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^11.1.6",
-        "@types/node": "^22.0.0",
-        "dotenv": "^16.4.5",
-        "npm-run-all": "^4.1.5",
-        "rollup": "^4.18.0",
-        "tslib": "^2.6.3",
-        "types-for-adobe": "^7.2.1",
-        "typescript": "5.4.5"
-    }
+  "name": "ae-script",
+  "version": "1.0.0",
+  "description": "personal AfterEffect scripts",
+  "keywords": [],
+  "author": "Cubxx",
+  "license": "ISC",
+  "type": "module",
+  "scripts": {
+    "launch": "node scripts/launch.js",
+    "dev-only": "cross-env NODE_ENV=dev && rollup -c -w",
+    "dev": "run-p launch dev-only",
+    "readme": "node scripts/readme.js",
+    "setup": "node scripts/setup.js",
+    "build": "cross-env NODE_ENV=prod && rollup -c && run-p readme setup"
+  },
+  "dependencies": {
+    "json5": "^2.2.3",
+    "soil-ts": "^1.1.6"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^22.0.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^4.18.0",
+    "tslib": "^2.6.3",
+    "types-for-adobe": "^7.2.1",
+    "typescript": "5.4.5"
+  }
 }
